@@ -10,7 +10,7 @@ binmode(STDOUT, ':utf8');
 binmode(STDERR, ':utf8');
 # We must declare in advance how many tests we are going to perform.
 # There are currently three tests per tagset driver.
-use Test::More tests => 12*3;
+use Test::More tests => 13*3;
 use Lingua::Interset qw(get_driver_object);
 use Lingua::Interset::Tagset;
 
@@ -22,7 +22,8 @@ my @tagsets =
     'bg::conll',
     'cs::pdt', 'cs::ajka', 'cs::multext', 'cs::pmkkr',
     'en::penn', 'en::conll', 'en::conll2009',
-    'hr::multext'
+    'hr::multext',
+    'ja::ipadic'
 );
 foreach my $tagset (@tagsets)
 {
